# Console-Game-Basis

./: CMakeLists.txt  Doxyfile  README.md
Documentation/html/: _control_8h.html  _control_8h_source.html  _map_8h.html  _map_8h_source.html  _object_list_8h.html  _object_list_8h_source.html  _position_8h.html  _position_8h_source.html  _world_object_8h.html  _world_object_8h_source.html  annotated.html  class_c_g_b_1_1_control-members.html  class_c_g_b_1_1_control.html  class_c_g_b_1_1_map-members.html  class_c_g_b_1_1_map.html  class_c_g_b_1_1_objects_list-members.html  class_c_g_b_1_1_objects_list.html  class_c_g_b_1_1_world_object-members.html  class_c_g_b_1_1_world_object.html  classes.html  dir_692516b589a32b3bfce781ca9f6d1534.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_vars.html  md__c_o_d_e___o_f___c_o_n_d_u_c_t.html  md__r_e_a_d_m_e.html  md__s_e_c_u_r_i_t_y.html  menudata.js  pages.html  struct_c_g_b_1_1_objects_list_1_1_object-members.html  struct_c_g_b_1_1_objects_list_1_1_object.html  struct_c_g_b_1_1_position-members.html  struct_c_g_b_1_1_position.html  struct_c_g_b_1_1_size_map-members.html  struct_c_g_b_1_1_size_map.html
Documentation/latex/: _control_8h.tex  _control_8h_source.tex  _map_8h.tex  _map_8h_source.tex  _object_list_8h.tex  _object_list_8h_source.tex  _position_8h.tex  _position_8h_source.tex  _world_object_8h.tex  annotated.tex  (+13 more)
Headers/: Color.h  Control.h  Map.h  ObjectList.h  Position.h  WorldObject.h
Sources/: Control.cpp  Map.cpp  ObjectList.cpp  WorldObject.cpp  main.cpp
(+66 files in other folders)
